index.css
body {
    font-family: 'Fira Sans', sans-serif;
    text-align: center;
    background: url("assets/bg.jpg") center no-repeat;
    background-size: cover;
}

button {
    margin-bottom: 10px;
    height: 50px;
    width: 250px;
    background-color: #aa406c;
    cursor: pointer;
    border: none;
    color: white;
    padding: 15px 32px;
    margin-right: 10px;
    margin-left: 10px;
    margin-top: 10px;
    text-decoration: none;
    font-size: 16px;
    border-radius: 10px;
    transition-duration: 0.4s;
}

button:hover {
    background-color: #ff00aa;
    color: white;
}

.main {
    height: 100%;
    position: relative;
    overflow: hidden;
}

.main .play {
    position: relative;
    top: 80vh;
}

.main .open_settings {
    cursor: pointer;
    position: absolute;
    right: 20px;
    top: 30px;
}

.settings {
    height: 100%;
    overflow: hidden;
}

.settings .close_settings {
    cursor: pointer;
    position: absolute;
    right: 20px;
    top: 30px;
}

